[gd_scene load_steps=12 format=3 uid="uid://cj6o4kudqhr8e"]

[ext_resource type="Script" path="res://1_Scripts/note.gd" id="1_q4khy"]
[ext_resource type="FontFile" uid="uid://da5k2m2fg3fk4" path="res://69_Fonts/YOZAKURA-Regular.otf" id="2_vao1b"]
[ext_resource type="Texture2D" uid="uid://cd72m5byd5hdb" path="res://2_Images/UI/panelInset_beige.png" id="3_2n7gt"]
[ext_resource type="Script" path="res://1_Scripts/note_int.gd" id="4_21wu0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0in1j"]
size = Vector2(11, 15.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkpky"]
size = Vector2(10.25, 15)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_11k2k"]
polygon = PackedVector2Array(-9, -9, 1, -9, 1, 6, -9, 6)

[sub_resource type="Animation" id="Animation_oftm6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KeyPoly:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fdtgg"]
resource_name = "door_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KeyPoly:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wbf4r"]
_data = {
"RESET": SubResource("Animation_oftm6"),
"door_open": SubResource("Animation_fdtgg")
}

[sub_resource type="LabelSettings" id="LabelSettings_s0whi"]
font_size = 20
font_color = Color(0.20871, 0.20871, 0.20871, 1)

[node name="Note" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_q4khy")

[node name="KeyPoly" type="Polygon2D" parent="."]
position = Vector2(1, 2)
scale = Vector2(0.140546, 0.352941)
texture = ExtResource("3_2n7gt")
texture_scale = Vector2(50, 50)
polygon = PackedVector2Array(0, 33, 28.475, 33, 31, 34, 56.9502, 33, 56.9503, 18, 56.9502, 0, -0.00484371, 0.00997257)
uv = PackedVector2Array(0.031497, 64.0319, 63.9543, 64.0104, 63.982, 0.0110836, -0.00484371, 0.00997257)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(5.5, 7.25)
shape = SubResource("RectangleShape2D_0in1j")

[node name="AreaOfInteraction" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOfInteraction"]
position = Vector2(4.875, 7.5)
shape = SubResource("RectangleShape2D_rkpky")
debug_color = Color(0, 0.647059, 0.176471, 0.0705882)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(9, 9)
occluder = SubResource("OccluderPolygon2D_11k2k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wbf4r")
}

[node name="Interact" type="CanvasLayer" parent="."]
visible = false

[node name="InteractText" type="Label" parent="Interact"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -40.0
offset_right = 168.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.638884, 2.02149e-06, 4.81307e-07, 1)
theme_override_fonts/font = ExtResource("2_vao1b")
theme_override_font_sizes/font_size = 33
text = "[E] TO INTERACT"

[node name="Note" type="CanvasLayer" parent="."]
script = ExtResource("4_21wu0")

[node name="Note" type="TextureRect" parent="Note"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -124.0
offset_top = 32.0
offset_right = -31.0
offset_bottom = 170.0
grow_horizontal = 0
texture = ExtResource("3_2n7gt")

[node name="Label" type="Label" parent="Note/Note"]
layout_mode = 0
offset_left = -4.0
offset_right = 95.0
offset_bottom = 136.0
text = "悪
魔
祓
い"
label_settings = SubResource("LabelSettings_s0whi")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="AreaOfInteraction" to="." method="_on_area_of_interaction_area_entered"]
[connection signal="area_exited" from="AreaOfInteraction" to="." method="_on_area_of_interaction_area_exited"]
